// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs /:serviceName 1`] = `
Array [
  Object {
    "href": "#/?_g=myG&kuery=myKuery",
    "text": "APM",
  },
  Object {
    "href": "#/opbeans-node?_g=myG&kuery=myKuery",
    "text": <breadcrumb
      match={
        Object {
          "isExact": true,
          "params": Object {
            "serviceName": "opbeans-node",
          },
          "path": "/:serviceName",
          "url": "/opbeans-node",
        }
      }
    />,
  },
]
`;

exports[`Breadcrumbs /:serviceName/errors 1`] = `
Array [
  Object {
    "href": "#/?_g=myG&kuery=myKuery",
    "text": "APM",
  },
  Object {
    "href": "#/opbeans-node?_g=myG&kuery=myKuery",
    "text": <breadcrumb
      match={
        Object {
          "isExact": true,
          "params": Object {
            "serviceName": "opbeans-node",
          },
          "path": "/:serviceName",
          "url": "/opbeans-node",
        }
      }
    />,
  },
  Object {
    "href": "#/opbeans-node/errors?_g=myG&kuery=myKuery",
    "text": "Errors",
  },
]
`;

exports[`Breadcrumbs /:serviceName/errors/:groupId 1`] = `
Array [
  Object {
    "href": "#/?_g=myG&kuery=myKuery",
    "text": "APM",
  },
  Object {
    "href": "#/opbeans-node?_g=myG&kuery=myKuery",
    "text": <breadcrumb
      match={
        Object {
          "isExact": true,
          "params": Object {
            "serviceName": "opbeans-node",
          },
          "path": "/:serviceName",
          "url": "/opbeans-node",
        }
      }
    />,
  },
  Object {
    "href": "#/opbeans-node/errors?_g=myG&kuery=myKuery",
    "text": "Errors",
  },
  Object {
    "href": "#/opbeans-node/errors/myGroupId?_g=myG&kuery=myKuery",
    "text": <breadcrumb
      match={
        Object {
          "isExact": true,
          "params": Object {
            "groupId": "myGroupId",
            "serviceName": "opbeans-node",
          },
          "path": "/:serviceName/errors/:groupId",
          "url": "/opbeans-node/errors/myGroupId",
        }
      }
    />,
  },
]
`;

exports[`Breadcrumbs /:serviceName/transactions 1`] = `
Array [
  Object {
    "href": "#/?_g=myG&kuery=myKuery",
    "text": "APM",
  },
  Object {
    "href": "#/opbeans-node?_g=myG&kuery=myKuery",
    "text": <breadcrumb
      match={
        Object {
          "isExact": true,
          "params": Object {
            "serviceName": "opbeans-node",
          },
          "path": "/:serviceName",
          "url": "/opbeans-node",
        }
      }
    />,
  },
  Object {
    "href": "#/opbeans-node/transactions?_g=myG&kuery=myKuery",
    "text": "Transactions",
  },
]
`;

exports[`Breadcrumbs /:serviceName/transactions/:transactionType 1`] = `
Array [
  Object {
    "href": "#/?_g=myG&kuery=myKuery",
    "text": "APM",
  },
  Object {
    "href": "#/opbeans-node?_g=myG&kuery=myKuery",
    "text": <breadcrumb
      match={
        Object {
          "isExact": true,
          "params": Object {
            "serviceName": "opbeans-node",
          },
          "path": "/:serviceName",
          "url": "/opbeans-node",
        }
      }
    />,
  },
  Object {
    "href": "#/opbeans-node/transactions?_g=myG&kuery=myKuery",
    "text": "Transactions",
  },
]
`;

exports[`Breadcrumbs /:serviceName/transactions/:transactionType/:transactionName 1`] = `
Array [
  Object {
    "href": "#/?_g=myG&kuery=myKuery",
    "text": "APM",
  },
  Object {
    "href": "#/:serviceName?_g=myG&kuery=myKuery",
    "text": <breadcrumb
      match={
        Object {
          "isExact": true,
          "params": Object {
            "serviceName": ":serviceName",
          },
          "path": "/:serviceName",
          "url": "/:serviceName",
        }
      }
    />,
  },
  Object {
    "href": "#/:serviceName/transactions?_g=myG&kuery=myKuery",
    "text": "Transactions",
  },
  Object {
    "href": "#/:serviceName/transactions/request/my-transaction-name?_g=myG&kuery=myKuery",
    "text": <breadcrumb
      match={
        Object {
          "isExact": true,
          "params": Object {
            "serviceName": ":serviceName",
            "transactionName": "my-transaction-name",
            "transactionType": "request",
          },
          "path": "/:serviceName/transactions/:transactionType/:transactionName",
          "url": "/:serviceName/transactions/request/my-transaction-name",
        }
      }
    />,
  },
]
`;

exports[`Breadcrumbs Homepage 1`] = `
Array [
  Object {
    "href": "#/?_g=myG&kuery=myKuery",
    "text": "APM",
  },
]
`;
